syntax = "proto3";

package com.dyptan;

option java_multiple_files = true;
option java_package = "com.dyptan.gen.proto";


service StreamerGateway {
  rpc ModelMetadata (MetadataRequest) returns (MetadataReply) {}
  rpc ApplyNewModel (ApplyRequest) returns (StatusReply) {}
}

message ApplyRequest {
  string path = 1;
}

message StatusReply {
  int32 status = 1;
  string message = 2;
}

message MetadataRequest {}
message MetadataReply {
  string owner = 1;
  string path = 2;
}